# raytracer

./: CMakeLists.txt  LICENSE  camera.cpp  camera.hpp  color.cpp  color.hpp  geometry.cpp  geometry.hpp  light.cpp  light.hpp  main.cpp  material.cpp  material.hpp  math.cpp  math.hpp  render.cpp  render.hpp  shape.cpp  shape.hpp  world.cpp  world.hpp
lights/: point.cpp  point.hpp
shapes/: plane.cpp  plane.hpp  sphere.cpp  sphere.hpp
